apps/documentation/manifests/webhook-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook-httproute
  namespace: documentation
spec:
  hostnames:
    - quartz-webhook.lab.mpopov.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
      namespace: networking
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: quartz-webhook
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
